--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./asset/css/reset.css">
-    <link rel="stylesheet" href="./asset/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./asset/css/reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./asset/css/style.css" />
     <title>duan2</title>
-</head>
-<body>
-    <header>
-
+  </head>
+  <body>
+    <!-- header -->
+    <header class="header fixed">
+        <div class="main">
+            <div class="body">
+                <!-- logo -->
+                <div class="logo">
+                    <img class="brand" src="./asset/icon/Rectangle 3634.svg" alt="Besnik">
+                    <img src="./asset/img/Union.svg" alt="Besnik">
+                    <img src="./asset/icon/dot.svg" alt="dot">
+                </div>
+                <!-- nav -->
+                <nav class="nav">
+                    <ul>
+                        <li>
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Features</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">About</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- button -->
+                <div class="sign">
+                    <a href="">Sign in</a>
+                    <a href="" class="btn btn-sign">Sign up</a>
+                </div>
+            </div>
+        </div>
     </header>
-</body>
+  </body>
 </html>
