--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./asset/css/style.css" />
     <title>duan2</title>
   </head>
-  <body>
+  <body style="height: 10000px;">
     <!-- header -->
     <header class="header fixed">
         <div class="main">
@@ -46,7 +46,7 @@
                 </nav>
                 <!-- button -->
                 <div class="sign">
-                    <a href="">Sign in</a>
+                    <a href="" class="btn">Sign in</a>
                     <a href="" class="btn btn-sign">Sign up</a>
                 </div>
             </div>
