--- a/index.html
+++ b/index.html
@@ -13,44 +13,74 @@
     <link rel="stylesheet" href="./asset/css/style.css" />
     <title>duan2</title>
   </head>
-  <body style="height: 10000px;">
+  <body style="height: 10000px">
     <!-- header -->
     <header class="header fixed">
-        <div class="main">
-            <div class="body">
-                <!-- logo -->
-                <div class="logo">
-                    <img class="brand" src="./asset/icon/Rectangle 3634.svg" alt="Besnik">
-                    <img src="./asset/img/Union.svg" alt="Besnik">
-                    <img src="./asset/icon/dot.svg" alt="dot">
-                </div>
-                <!-- nav -->
-                <nav class="nav">
-                    <ul>
-                        <li>
-                            <a href="#!">Home</a>
-                        </li>
-                        <li>
-                            <a href="#!">Features</a>
-                        </li>
-                        <li>
-                            <a href="#!">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="#!">About</a>
-                        </li>
-                        <li>
-                            <a href="#!">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-                <!-- button -->
-                <div class="sign">
-                    <a href="" class="btn">Sign in</a>
-                    <a href="" class="btn btn-sign">Sign up</a>
-                </div>
-            </div>
+      <div class="main">
+        <div class="body">
+          <!-- logo -->
+          <div class="logo">
+            <img
+              class="brand"
+              src="./asset/icon/Rectangle 3634.svg"
+              alt="Besnik"
+            />
+            <img src="./asset/img/Union.svg" alt="Besnik" />
+            <img src="./asset/icon/dot.svg" alt="dot" />
+          </div>
+          <!-- nav -->
+          <nav class="nav">
+            <ul>
+              <li>
+                <a href="#!">Home</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">About</a>
+              </li>
+              <li>
+                <a href="#!">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- button -->
+          <div class="sign">
+            <a href="#!" class="btn">Sign in</a>
+            <a href="#!" class="btn btn-sign">Sign up</a>
+          </div>
         </div>
+      </div>
     </header>
+    <!-- main -->
+    <main>
+      <!-- hero -->
+      <div class="hero">
+        <div class="main">
+          <div class="hero-l">
+            <p class="small">😎 EASY LEAENING PLATFORM</p>
+            <h1 class="lv1">Words learner come here.</h1>
+            <p class="desc">
+              Build skills with courses, certificates, and get online knowledge
+              from our worldclass platform.
+            </p>
+            <div class="choice">
+              <a href="#!" class="btn">Get Started</a>
+              <button>
+                <img src="./asset/icon/Vector 90.svg" alt="">
+              </button>
+            </div>
+          </div>
+          <div class="hero-pic">
+            <img src="./asset/img/hero.png" alt="" />
+            
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
