--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <div class="hero">
         <div class="main">
           <div class="hero-l">
-            <p class="small">😎 EASY LEAENING PLATFORM</p>
+            <p class="small">😎 EASY LEARNING PLATFORM</p>
             <h1 class="lv1">Words learner come here.</h1>
             <p class="desc">
               Build skills with courses, certificates, and get online knowledge
-              from our worldclass platform.
+              from our world-class platform.
             </p>
             <div class="choice">
               <a href="#!" class="btn">Get Started</a>
@@ -77,7 +77,29 @@
           </div>
           <div class="hero-pic">
             <img src="./asset/img/hero.png" alt="" />
-            
+            <div class="cousre">
+              <img src="./asset/icon/Book.svg" alt="book">
+              <p>Courses <br> 1000+</p>
+            </div>
+            <div class="schedule">
+              <span>Schedules</span>
+              <img src="./asset/icon/schedule1.svg" alt="" class="sicon icon1">
+              <img src="./asset/icon/schedule2.svg" alt="" class="sicon icon2">
+              <img src="./asset/icon/schedule3.svg" alt="" class="sicon icon3">
+              <img src="./asset/icon/schedule4.svg" alt="" class="sicon icon4">
+            </div>
+            <div class="student">
+              <p>Our Active Students</p>
+              <div class="avt">
+                <img src="./asset/img/av1.png" alt="" class="avtb avt1">
+                <img src="./asset/img/av2.png" alt="" class="avtb avt2">
+                <img src="./asset/img/av3.png" alt="" class="avtb avt3">
+                <img src="./asset/img/av4.png" alt="" class="avtb avt4">
+                <div>
+                  <span  class="avtb">10K+</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
