--- a/index.html
+++ b/index.html
@@ -71,33 +71,84 @@
             <div class="choice">
               <a href="#!" class="btn">Get Started</a>
               <button>
-                <img src="./asset/icon/Vector 90.svg" alt="">
+                <img src="./asset/icon/Vector 90.svg" alt="" />
               </button>
             </div>
           </div>
           <div class="hero-pic">
             <img src="./asset/img/hero.png" alt="" />
             <div class="cousre">
-              <img src="./asset/icon/Book.svg" alt="book">
-              <p>Courses <br> 1000+</p>
+              <img src="./asset/icon/Book.svg" alt="book" />
+              <p>
+                Courses <br />
+                1000+
+              </p>
             </div>
             <div class="schedule">
               <span>Schedules</span>
-              <img src="./asset/icon/schedule1.svg" alt="" class="sicon icon1">
-              <img src="./asset/icon/schedule2.svg" alt="" class="sicon icon2">
-              <img src="./asset/icon/schedule3.svg" alt="" class="sicon icon3">
-              <img src="./asset/icon/schedule4.svg" alt="" class="sicon icon4">
+              <img
+                src="./asset/icon/schedule1.svg"
+                alt=""
+                class="sicon icon1"
+              />
+              <img
+                src="./asset/icon/schedule2.svg"
+                alt=""
+                class="sicon icon2"
+              />
+              <img
+                src="./asset/icon/schedule3.svg"
+                alt=""
+                class="sicon icon3"
+              />
+              <img
+                src="./asset/icon/schedule4.svg"
+                alt=""
+                class="sicon icon4"
+              />
             </div>
             <div class="student">
               <p>Our Active Students</p>
               <div class="avt">
-                <img src="./asset/img/av1.png" alt="" class="avtb avt1">
-                <img src="./asset/img/av2.png" alt="" class="avtb avt2">
-                <img src="./asset/img/av3.png" alt="" class="avtb avt3">
-                <img src="./asset/img/av4.png" alt="" class="avtb avt4">
+                <img src="./asset/img/av1.png" alt="" class="avtb avt1" />
+                <img src="./asset/img/av2.png" alt="" class="avtb avt2" />
+                <img src="./asset/img/av3.png" alt="" class="avtb avt3" />
+                <img src="./asset/img/av4.png" alt="" class="avtb avt4" />
                 <div>
-                  <span  class="avtb">10K+</span>
+                  <span class="avtb">10K+</span>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- features -->
+      <div class="feature">
+        <div class="main">
+          <div class="idea">
+            <div class="top">
+              <p class="title">F E A T U R E S</p>
+              <h2 class="lv2">We are providing suitable features for students.</h2>
+              <p>
+                Read our awesome feature that is absolutely suit for you. Explore
+                the feature and know the best.
+              </p>
+            </div>
+            <div class="bot">
+              <div class="more">
+                <img src="./asset/icon/feature1.svg" alt="Live Class">
+                <p class="name">Live Class</p>
+                <p class="desc">We are providing live <br>classes with the best <br>teacher for you</p>
+              </div>
+              <div class="more">
+                <img src="./asset/icon/feature2.svg" alt="Discuss">
+                <p class="name">Discuss</p>
+                <p class="desc">Conversation with teachers <br>or another students about <br>task or any other thing</p>
+              </div>
+              <div class="more">
+                <img src="./asset/icon/feature3.svg" alt="Task">
+                <p class="name">Task</p>
+                <p class="desc">We give every of our <br>students task for gathering <br>knowledge at home</p>
               </div>
             </div>
           </div>
