--- a/index.html
+++ b/index.html
@@ -154,6 +154,72 @@
           </div>
         </div>
       </div>
+      <!-- popular -->
+      <div class="popular">
+        <div class="main">
+          <div class="top">
+            <p class="title">C  O  U  R  S  E  S</p>
+            <h2 class="lv2">Popular Courses</h2>
+            <div class="view">
+              <p>
+                Check out our most poular courses that suit for you. Here <br>
+                you can find your favourite one.
+              </p>
+              <a href="#! " class="left">View All Courses</a>
+            </div>
+          </div>
+          <div class="bot">
+            <div class="list">
+              <img src="./asset/img/popular1.jpg" alt="Web Design" class="pic">
+              <div class="course">
+                <div class="name">Web Design</div>
+                <p class="change">Fee <span class="name">$200</span></p>
+                <p>Web design basic to higer level</p>
+                <div class="more">
+                  <div class="dot">
+                    <p>40 Classes</p>
+                  </div>
+                  <div class="dot">
+                    <p>3 Months</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list">
+              <img src="./asset/img/popular2.jpg" alt="Web Development" class="pic">
+              <div class="course">
+                <div class="name">Web Development</div>
+                <p class="change">Fee <span class="name">$250</span></p>
+                <p>Web development basic to higer level</p>
+                <div class="more">
+                  <div class="dot">
+                    <p>30 Classes</p>
+                  </div>
+                  <div class="dot">
+                    <p>3 Months</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="list">
+              <img src="./asset/img/popular3.jpg" alt="UI/UX Design" class="pic">
+              <div class="course">
+                <div class="name">UI/UX Design</div>
+                <p class="change">Fee <span class="name">$350</span></p>
+                <p>UI/UX design basic to higer level</p>
+                <div class="more">
+                  <div class="dot">
+                    <p>50 Classes</p>
+                  </div>
+                  <div class="dot">
+                    <p>4 Months</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
