--- a/index.html
+++ b/index.html
@@ -220,6 +220,25 @@
           </div>
         </div>
       </div>
+      <!-- more -->
+      <div class="more">
+        <div class="main">
+          <div class="info">
+            <div class="group">
+              <p class="num">100+</p>
+              <p class="desc">Popular Courses</p>
+            </div>
+            <div class="group">
+              <p class="num">500+</p>
+              <p class="desc">Skilled Trainer</p>
+            </div>
+            <div class="group">
+              <p class="num">1M+</p>
+              <p class="desc">Student Learning</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
