--- a/index.html
+++ b/index.html
@@ -128,27 +128,38 @@
           <div class="idea">
             <div class="top">
               <p class="title">F E A T U R E S</p>
-              <h2 class="lv2">We are providing suitable features for students.</h2>
+              <h2 class="lv2">
+                We are providing suitable features for students.
+              </h2>
               <p>
-                Read our awesome feature that is absolutely suit for you. Explore
-                the feature and know the best.
+                Read our awesome feature that is absolutely suit for you.
+                Explore the feature and know the best.
               </p>
             </div>
             <div class="bot">
               <div class="more">
-                <img src="./asset/icon/feature1.svg" alt="Live Class">
+                <img src="./asset/icon/feature1.svg" alt="Live Class" />
                 <p class="name">Live Class</p>
-                <p class="desc">We are providing live <br>classes with the best <br>teacher for you</p>
+                <p class="desc">
+                  We are providing live <br />classes with the best
+                  <br />teacher for you
+                </p>
               </div>
               <div class="more">
-                <img src="./asset/icon/feature2.svg" alt="Discuss">
+                <img src="./asset/icon/feature2.svg" alt="Discuss" />
                 <p class="name">Discuss</p>
-                <p class="desc">Conversation with teachers <br>or another students about <br>task or any other thing</p>
+                <p class="desc">
+                  Conversation with teachers <br />or another students about
+                  <br />task or any other thing
+                </p>
               </div>
               <div class="more">
-                <img src="./asset/icon/feature3.svg" alt="Task">
+                <img src="./asset/icon/feature3.svg" alt="Task" />
                 <p class="name">Task</p>
-                <p class="desc">We give every of our <br>students task for gathering <br>knowledge at home</p>
+                <p class="desc">
+                  We give every of our <br />students task for gathering
+                  <br />knowledge at home
+                </p>
               </div>
             </div>
           </div>
@@ -158,11 +169,11 @@
       <div class="popular">
         <div class="main">
           <div class="top">
-            <p class="title">C  O  U  R  S  E  S</p>
+            <p class="title">C O U R S E S</p>
             <h2 class="lv2">Popular Courses</h2>
             <div class="view">
               <p>
-                Check out our most poular courses that suit for you. Here <br>
+                Check out our most poular courses that suit for you. Here <br />
                 you can find your favourite one.
               </p>
               <a href="#! " class="left">View All Courses</a>
@@ -170,7 +181,11 @@
           </div>
           <div class="bot">
             <div class="list">
-              <img src="./asset/img/popular1.jpg" alt="Web Design" class="pic">
+              <img
+                src="./asset/img/popular1.jpg"
+                alt="Web Design"
+                class="pic"
+              />
               <div class="course">
                 <div class="name">Web Design</div>
                 <p class="change">Fee <span class="name">$200</span></p>
@@ -186,7 +201,11 @@
               </div>
             </div>
             <div class="list">
-              <img src="./asset/img/popular2.jpg" alt="Web Development" class="pic">
+              <img
+                src="./asset/img/popular2.jpg"
+                alt="Web Development"
+                class="pic"
+              />
               <div class="course">
                 <div class="name">Web Development</div>
                 <p class="change">Fee <span class="name">$250</span></p>
@@ -202,7 +221,11 @@
               </div>
             </div>
             <div class="list">
-              <img src="./asset/img/popular3.jpg" alt="UI/UX Design" class="pic">
+              <img
+                src="./asset/img/popular3.jpg"
+                alt="UI/UX Design"
+                class="pic"
+              />
               <div class="course">
                 <div class="name">UI/UX Design</div>
                 <p class="change">Fee <span class="name">$350</span></p>
@@ -235,6 +258,28 @@
             <div class="group">
               <p class="num">1M+</p>
               <p class="desc">Student Learning</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- noted -->
+      <div class="noted">
+        <div class="main">
+          <div class="note">
+            <div class="left">
+              <img src="./asset/icon/note.svg" alt="" />
+              <p class="said">
+                “They are the best people. And this is the suitable platform to
+                learn from distance.”
+              </p>
+              <div class="tel">
+                <div class="ret"></div>
+                <p class="who"><span>Ben Foakes,</span> student.</p>
+              </div>
+              <div class="choice">
+                <p class="switch">a</p>
+                <p class="switch">b</p>
+              </div>
             </div>
           </div>
         </div>
