--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="main">
           <div class="note">
             <div class="left">
-              <img src="./asset/icon/note.svg" alt="" />
+              <img src="./asset/icon/note.svg" alt="" class="open">
               <p class="said">
                 “They are the best people. And this is the suitable platform to
                 learn from distance.”
@@ -276,10 +276,22 @@
                 <div class="ret"></div>
                 <p class="who"><span>Ben Foakes,</span> student.</p>
               </div>
-              <div class="choice">
-                <p class="switch">a</p>
-                <p class="switch">b</p>
+              <div class="choice">                
+                <div class="switch">
+                  <img src="./asset/icon/prev.svg" alt="" class="ima">
+                </div>
+                <div class="switch">
+                  <img src="./asset/icon/next.svg" alt="" class="ima">
+                </div>
               </div>
+            </div>
+            <div class="right">
+              <img src="./asset/img/av1hd.png" alt="" class="lv1">
+              <img src="./asset/img/av4hd.png" alt="" class="lv4 yel">             
+              <img src="./asset/img/av3hd.png" alt="" class="lv3">
+              <img src="./asset/img/av2hd.png" alt="" class="lv2">
+              <img src="./asset/img/av5.png" alt="" class="lv4 r">
+              <img src="./asset/img/av6.png" alt="" class="lv4 bl">
             </div>
           </div>
         </div>
