--- a/index.html
+++ b/index.html
@@ -296,6 +296,18 @@
           </div>
         </div>
       </div>
+      <!-- ready -->
+      <div class="ready">
+        <div class="main">
+          <div class="amit">
+            <div class="text">
+              <p class="lv2">Ready to Get Admit</p>
+              <p class="desc">Create your account and Boost your Career.</p>
+            </div>
+            <a href="" class="btn">Get Started</a>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
