--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./asset/css/style.css" />
     <title>duan2</title>
   </head>
-  <body style="height: 10000px">
+  <body>
     <!-- header -->
     <header class="header fixed">
       <div class="main">
@@ -267,7 +267,7 @@
         <div class="main">
           <div class="note">
             <div class="left">
-              <img src="./asset/icon/note.svg" alt="" class="open">
+              <img src="./asset/icon/note.svg" alt="" class="open" />
               <p class="said">
                 “They are the best people. And this is the suitable platform to
                 learn from distance.”
@@ -276,22 +276,22 @@
                 <div class="ret"></div>
                 <p class="who"><span>Ben Foakes,</span> student.</p>
               </div>
-              <div class="choice">                
+              <div class="choice">
                 <div class="switch">
-                  <img src="./asset/icon/prev.svg" alt="" class="ima">
+                  <img src="./asset/icon/prev.svg" alt="" class="ima" />
                 </div>
                 <div class="switch">
-                  <img src="./asset/icon/next.svg" alt="" class="ima">
+                  <img src="./asset/icon/next.svg" alt="" class="ima" />
                 </div>
               </div>
             </div>
             <div class="right">
-              <img src="./asset/img/av1hd.png" alt="" class="lv1">
-              <img src="./asset/img/av4hd.png" alt="" class="lv4 yel">             
-              <img src="./asset/img/av3hd.png" alt="" class="lv3">
-              <img src="./asset/img/av2hd.png" alt="" class="lv2">
-              <img src="./asset/img/av5.png" alt="" class="lv4 r">
-              <img src="./asset/img/av6.png" alt="" class="lv4 bl">
+              <img src="./asset/img/av1hd.png" alt="" class="lv1" />
+              <img src="./asset/img/av4hd.png" alt="" class="lv4 yel" />
+              <img src="./asset/img/av3hd.png" alt="" class="lv3" />
+              <img src="./asset/img/av2hd.png" alt="" class="lv2" />
+              <img src="./asset/img/av5.png" alt="" class="lv4 r" />
+              <img src="./asset/img/av6.png" alt="" class="lv4 bl" />
             </div>
           </div>
         </div>
@@ -304,10 +304,51 @@
               <p class="lv2">Ready to Get Admit</p>
               <p class="desc">Create your account and Boost your Career.</p>
             </div>
-            <a href="" class="btn">Get Started</a>
+            <a href="#!" class="btn">Get Started</a>
           </div>
         </div>
       </div>
     </main>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="main">
+        <div class="body">
+          <div class="logo">
+            <img src="./asset/img/Union.svg" alt="Besnik" class="name" />
+            <img src="./asset/icon/dot.svg" alt="dot" class="dot" />
+          </div>
+          <div class="company">
+            <div class="up">Company</div>
+            <a href="#!">About</a>
+            <a href="#!">Career</a>
+            <a href="#!">Press</a>
+          </div>
+          <div class="Community">
+            <div class="up">Community</div>
+            <a href="#!">Team Plans</a>
+            <a href="#!">Blog</a>
+            <a href="#!">Students</a>
+            <a href="#!">Schoolarships</a>
+          </div>
+          <div class="Teaching">
+            <div class="up">Teaching</div>
+            <a href="#!">Become a teacher</a>
+            <a href="#!">Teaching academy</a>
+          </div>
+          <div class="Be social">
+            <div class="up">Be social</div>
+            <a href="#!">Twitter</a>
+            <a href="#!">Facebook</a>
+            <a href="#!">Instagram</a>
+            <a href="#!">Linkedin</a>
+          </div>
+        </div>
+        <div class="cp">
+          <div class="copyright">
+            © Copyright 2020 by Mayad Ahmed. All right reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
